Test for statement with multiple update part.